[gd_scene load_steps=6 format=3 uid="uid://1n0r1pvx421r"]

[ext_resource type="Script" path="res://scripts/hive.gd" id="1_agc8l"]
[ext_resource type="PackedScene" uid="uid://brgjwjphru0r" path="res://bodies/bee.tscn" id="2_j7drg"]
[ext_resource type="PackedScene" uid="uid://cxiasvd6udb6j" path="res://bodies/hive_model.tscn" id="3_drmic"]
[ext_resource type="Script" path="res://scripts/hive_hit_area.gd" id="4_pcv74"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mvikf"]
size = Vector3(2.81226, 2.91223, 1)

[node name="Hive" type="Node3D"]
script = ExtResource("1_agc8l")
bee = ExtResource("2_j7drg")

[node name="hive_model" parent="." instance=ExtResource("3_drmic")]

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="HitArea" type="StaticBody3D" parent="."]
collision_layer = 10
collision_mask = 10
script = ExtResource("4_pcv74")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51657, 0)
shape = SubResource("BoxShape3D_mvikf")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
